[package]
name = "sauth_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
async-trait = "0.1.88"